--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,17 +10,33 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.4", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "api-all"] }
+tauri = { version = "2", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4.30"
 open = "5.0.0"
 tilde-expand = "0.1.1"
+tauri-plugin-fs = "2"
+tauri-plugin-shell = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-notification = "2"
+tauri-plugin-http = "2"
+tauri-plugin-os = "2"
+tauri-plugin-process = "2"
+tauri-plugin-clipboard-manager = "2.2.0"
+cocoa = "0.26.0"
+objc = "0.2.7"
+lazy_static = "1.5.0"
+anyhow = "1.0.95"
+dirs-next = "2.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-global-shortcut = "2"
