feat: add configuration management and annoying behavior
- Implement configuration management using serde_yaml
- Add AnnoyingLevel enum to control annoying behavior
- Refactor timer logic into a store
- Add blinking and random window positioning for high annoying level
- Load configuration from config.yaml file
- Expose fetch_config Tauri command to get configuration

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ lazy_static = "1.5.0"
 anyhow = "1.0.95"
 dirs-next = "2.0.0"
 tauri-plugin-notification = "2.0.0"
+serde_yaml = "0.9.34"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
